--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <option>100,000kshs</option>
                 <option>150,000kshs</option>
                 <option>200,000kshs</option>
+                <option>250,000kshs</option>
               </select>
             </div>
           </div>
